<resources>
    <string name="app_name">Classic Car Selling</string>
    <string name="content_description">Image Icon</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="search_cars">Search Cars</string>
    <string name="brand">Brand</string>
    <string name="personal_information">Personal Information</string>
    <string name="notifications">Notifications</string>
    <string name="wishlist">Wishlist</string>
    <string name="saved">Saved</string>
    <string name="selangor">Selangor</string>
    <string name="order_checklist">Order Checklist</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="skip">Skip</string>
    <string name="save_information">Save Information</string>
    <string name="city">City</string>
    <string name="cars_in_cart">Cars in Cart</string>
    <string name="checkout_order">Checkout Order</string>
    <string name="log_out">Log Out</string>
</resources>